fix: disable preview features (#263)
Co-Authored-By: Pablo Klaschka <contact@pabloklaschka.de>
Co-Authored-By: Jan von Pichowski <janvonpichowski@gmail.com>