@@ -21,21 +21,6 @@ subprojects {
                     "--add-opens", "java.management/sun.management=ALL-UNNAMED",
                     "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
     }
-
-    // enable preview features
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-    }
-    tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
-        ignoreFailures = true
-        reports {
-            junitXml.enabled = true
-        }
-    }
-    tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
-    }
 }
 
 
